# NL-PartSol

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  INSTALL.md  Install.sh  Install_LINUX.sh  Install_MACOSX.sh  PyGrams.py  README.html  README.html~  README.md  README.org  README.tex  RunCase.py~  SPH_PyTools.py  SimulationFiles.py  SimulationFiles.py~  configure.sh  ejemplo.gdf  index.md
Future_Features/gidpost/: CMakeLists.txt
Future_Features/gidpost/buildL/: cmake_install.cmake  gidpost_config.h
Future_Features/gidpost/examples/: TestMultiplePartition.cxx
Future_Features/gidpost/source/: Makefile  gidpostHDF5.c  hashtab.h
nl-partsol/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  cmake_install.cmake  configure.sh  driver-nl-partsol.c  nl-partsol
nl-partsol/include/: Algebraic-solvers.h  Constitutive.h  Fields.h  Formulations.h  GIMP.h  Globals.h  H8.h  InOutFun.h  LME.h  MPM.h  Macros.h  Matlib.h  MeshTools.h  Nodes.h  Particles.h  Q4.h  Q8.h  ShapeFun.h  Solvers.h  T3.h  T4.h  T6.h  Types.h  Variables.h  Variables.h~  aLME.h  grams.h  nl-partsol.h
nl-partsol/include/Constitutive/: Constitutive.h
nl-partsol/include/Formulations/: Courant.h
nl-partsol/include/Linear-Solvers/: Conjugate-Gradient.h  dgetrs-LAPACK.h
nl-partsol/include/Nodes/: GIMP.h  LME.h  Nodes-Tools.h  Read-GID-Mesh.h  Shape-Functions.h  aLME.h
nl-partsol/nl-partsol/: Makefile  cmake_install.cmake
nl-partsol/src/: ElementTools.c~  Forces.c~  GRAMS.c~  Globals.h  InOutFun.h  MPM.c~  Macros.h  Particles.h  ShapeFunctions.c~  Solvers.c~  Types.h  driver-nl-partsol.c  main.c~
nl-partsol/src/Constitutive/: Bingham-Fluid.c  Constitutive.c  Constitutive.h  Drucker-Prager-Backward-Euler.c  Drucker-Prager.c  Finite-Strain-Plasticity.c  Fracture.c  Fracture.c~  Hencky.c  LE.c  LE.c~  Linear-Elastic.c  Mooney-Rivlin.c  Neo-Hookean-Wriggers.c  Neo-Hookean.c  Newtonian-Fluid-Incompressible.c  Newtonian-Fluid.c  Saint-Venant-Kirchhoff.c  SolidRigid.c  Stress-Integration-Rules.c  Von-Mises-Backward-Euler.c  Von-Mises-Forward-Euler.c  Von-Mises-Perzyna.c  Von-Mises.c
nl-partsol/src/Fields/: U-Analisys.c  U-p-Analisys.c  U-pw-Analisys.c  mem_Boundaries.c~  mem_Fields.c  mem_Fields.c~
nl-partsol/src/Formulations/: Courant.c  Courant.h  U_FE.c  U_GA.c  U_PCE.c
nl-partsol/src/InOutFun/: #Read_GramsMaterials.c#  #Read_GramsTime.c#  .#Read_GramsMaterials.c  .#Read_GramsShapeFun.c  File2Chain.c  File2Chain.c~  Generate-Gauss-Point-Analysis.c  GnuPlotOutput.c  NLPS-Hidrostatic-Condition.c  NLPS-Initial-condition-nodes.c  NLPS-Out-csv.c  NLPS-Out-nodal-path-csv.c  NLPS-Out-particle-path-csv.c  NLPS-Read-Material-Mixtures.c  NLPS-Read-Soil-Water-Coupling-One-Layer.c  NLPS-Read-Tools.c  NLPS-Read-upw-Boundary-Conditions.c  NLPS-Read-upw-Dirichlet-Boundary-Conditions.c  NLPS-Read-upw-Neumann-Boundary-Conditions.c  OutputSimulation.c  Parser.c  Parser.c~  Read-Delimited-File.c  ReadCSV.c  ReadCurve.c  ReadGidMesh.c  ReadGidMesh.c~  Read_Generate_Gravity_Field.c  Read_GramsBodyForces.c  Read_GramsBodyForces.c~  Read_GramsBoundary.c  Read_GramsBoundary.c~  Read_GramsBox.c  Read_GramsBox.c~  Read_GramsContactForces.c  Read_GramsInitials.c  Read_GramsInitials.c~  Read_GramsMaterials.c  Read_GramsMaterials.c~  Read_GramsMaterials2.c  (+11 more)
nl-partsol/src/Linear-Solvers/: Conjugate-Gradient.c  Conjugate_Gradient.c  Jacobi-Conjugate-Gradient.c  Jacobi-Conjugate-Gradient.h  Jacobi_Conjugate_Gradient.c  dgetrs-LAPACK.c  dgetrs-LAPACK.h  dgetrs_LAPACK.c  ksp-PETSC.c  ksp-PETSC.h
nl-partsol/src/MPM/: Boundary_Conditions.c  GridGenerator.c~  MeshTools.c~  Mesh_Tools.c  Update_Eulerian.c  Update_Eulerian.c~  Update_Lagrangian.c  compute-Loads.c  compute_Density.c  compute_ExternalForces.c  compute_ExternalForces.c~  compute_IntenalForces.c  compute_IntenalForces.c~  compute_InternalEnergy.c  compute_InternalEnergy.c~  compute_Strains.c  compute_Strains.c~  compute_Stress.c  compute_equilibrium.c  compute_equilibrium.c~  update_LocalState.c  update_LocalState.c~
nl-partsol/src/Matlib/: ChainOp.c  LAPACK_Interface.c  MathOp.c  MathOp.c~  MathTools.h~  Matlib.h~  MatrixOp.c  MatrixOp.c~  Solvers.c  Solvers.c~  TensorLib.c  TensorLib.c~
nl-partsol/src/Nodes/: GIMP.c  H8.c  H8.h  LME.c  Nodes-Tools-3D.c.aux  Nodes-Tools.c  Q4.c  Q4.h  Q8.c  Read-GID-Mesh.c  Shape-Functions.c  Shape-Functions.h  T3.c  T3.h  T4.c  T4.h  T6.c  aLME.c  aLME.h
nl-partsol/src/Particles/: Particles-Tools.c  compute-Density.c  compute-Internal-Energy.c  compute-Loads.c  compute-Strains.c  compute-Strains.h  compute-Stress.c
nl-partsol/src/ShapeFun/: GIMP.c  GIMP.c~  L2.c  LME.c  LME.c~  MeshTools.c  Operators.c  Operators.c~  Q4.c  T3.c
nl-partsol/src/Solvers/: Courant.c  Gauss-Point-Analysis.c  S-V-Two-Steps-Taylor-Galerkin.c  U-Discrete-Energy-Momentum.c  U-Dynamic-Relaxation-Finite-Strains.c  U-Forward-Euler.c  U-Generalized-Alpha.c  U-Newmark-Predictor-Corrector-Finite-Strains.c  U-Newmark-Predictor-Corrector.c  U-Newmark-beta-Finite-Srains.c  U-Newmark-beta-Finite-Strains-BDB.c  U-Newmark-beta-Finite-Strains.c  U-p-Newmark-beta-Finite-Strains.c  U-pw-Newmark-Predictor-Corrector-Finite-Strains.c  U-pw-Newmark-beta-Finite-Strains.c
nl-partsol/src/Time_Integration/: .#U-Discrete-Energy-Momentum.c  Courant.c  U-Discrete-Energy-Momentum.c  U_FE.c  U_GA.c  U_PCE.c
nl-partsol/test/: Makefile  Makefile~  mesh1D_HD.msh~
nl-partsol/test/Brazilian_LME/: ejemplo.gdf~
nl-partsol/test/CasoBarraVertical/: CurveConstat.txt
nl-partsol/test/Cuadrado_MPM/: ejemplo.dat~
nl-partsol/test/Disco_MPM/: ejemplo.dat~
nl-partsol/test/Dyka_GenAlpha/: Velocity.py
nl-partsol/test/Sulsky_LME/: MPM_Mesh.msh
nl-partsol/test/Three_Point_Bar/: Test1.gdf~  Test_1.tar.xz
nl-partsol/test/Traccion_MPM/: Load2.txt
nl-partsol/tests/: test-nl-partsol.c
nl-partsol/tests/Constitutive/: Drucker-Prager-Backward-Euler  Drucker-Prager-Backward-Euler.c  Elastoplastic-Tangent-Matrix.c  Elastoplastic-Tangent-Matrix.py  Frictional-Monolithic.c  Matsuoka_Nakai  Von-Mises  (+7 more)
tests/: CMakeLists.txt
tests/Frictional-Monolitic/: CMakeLists.txt  test.c
(+29786 files in other folders)
